Updated CV and fixed typos

--- a/cranworth/index.html
+++ b/cranworth/index.html
@@ -26,7 +26,7 @@
         <h1 class="title" style="text-align: center;">Cranworth Law Society Website</h1>
         <h2 class="subtitle" style="text-align: center;">Web App</h2>
         <img src="img/cranworth1.png" alt="">
-        <p align="center" class="summary">I created a web application in Django to serve Downing College&#39;s Cranworth Law Society website.</p>
+        <p align="center" class="summary">I created a web application using Django to serve Downing College&#39;s Cranworth Law Society website.</p>
         <h1 style="color: black; font-family: merriweather; font-size: 26px; line-height: 1.7em; margin-top: 0px;"></h1>
         <div align="center" class="case-links">
             
