--- a/ballot/index.html
+++ b/ballot/index.html
@@ -26,7 +26,7 @@
         <h1 class="title" style="text-align: center;">Downing JCR Room Balloting System</h1>
         <h2 class="subtitle" style="text-align: center;">Web App</h2>
         <img src="img/ballot1.png" alt="">
-        <p align="center" class="summary">I created a web application in Django for managing Downing College&#39;s yearly room ballot.</p>
+        <p align="center" class="summary">I created a web application using Django for managing Downing College&#39;s yearly room ballot.</p>
         <h1 style="color: black; font-family: merriweather; font-size: 26px; line-height: 1.7em; margin-top: 0px;"></h1>
         <div align="center" class="case-links">
             
