--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <a href="/cranworth/"><img src="https://cjoc.github.io/img/ballot1.png" alt=""></a>
                 <h4>Cranworth</h4>
                 <h5>Web App</h5>
-                <p>I created a web application in Django to serve Downing College&#39;s Cranworth Law Society website.</p>
+                <p>I created a web application using Django to serve Downing College&#39;s Cranworth Law Society website.</p>
                 <a href="/cranworth/" class="read-more">Read More</a>
             </div>
             
