Updated images, minor text edits

--- a/ballot/index.html
+++ b/ballot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-gb">
     <head>
         <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -80,7 +80,7 @@
 
 <h1 id="the-ux">The UX</h1>
 
-<p>Students can log in with their Raven credentials, then are met with their dashboard, showing relevant information. First-year students can create their syndicate by searching for students by name or CRSid, using a simple jQuery autocomplete field. Clicking the student adds them to this syndicate.</p>
+<p>Students can log in with their Raven credentials, then are met with their dashboard, showing relevant information. First-year students can create their syndicate by searching for students by name or CRSid, using a simple jQuery autocomplete field. Clicking the student adds them to this syndicate. Students can view all rooms in College in advance of ballot day.</p>
 
 <p><img src="img/ballot2.png"></p>
 
@@ -94,7 +94,7 @@
 
 <h1 id="the-stack">The Stack</h1>
 
-<p>The web application backend was developed in Django, because it&rsquo;s quite nice, and the UI is built using Bootstrap and jQuery. To enable students to log in with their Cambridge-issued Raven credentials, <a href="https://pypi.org/project/django-ucamwebauth/">django-ucamwebauth</a> is used as an authentication backend. The Django backend connects to a MySQL instance, and is deployed to the JCR VPS using mod_wsgi on Apache. The Python backend executes in a Python 3.5 <a href="https://virtualenv.pypa.io/en/stable/">virtualenv</a>.</p>
+<p>The web application backend was developed using Django, because it&rsquo;s quite nice, and the UI is built using Bootstrap and jQuery. To enable students to log in with their Cambridge-issued Raven credentials, <a href="https://pypi.org/project/django-ucamwebauth/">django-ucamwebauth</a> is used as an authentication backend. The Django backend connects to a MySQL instance, and is deployed to the JCR VPS using mod_wsgi on Apache. The Python backend executes in a Python 3.5 <a href="https://virtualenv.pypa.io/en/stable/">virtualenv</a>.</p>
 
             </div>
         </section>
@@ -129,7 +129,7 @@
                 <a href="/cranworth/"><img src="https://cjoc.github.io/img/ballot1.png" alt=""></a>
                 <h4>Cranworth</h4>
                 <h5>Web App</h5>
-                <p>I created a web application in Django to serve Downing College&#39;s Cranworth Law Society website.</p>
+                <p>I created a web application using Django to serve Downing College&#39;s Cranworth Law Society website.</p>
                 <a href="/cranworth/" class="read-more">Read More</a>
             </div>
             
