--- a/cranworth/index.html
+++ b/cranworth/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-gb">
     <head>
         <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -82,7 +82,7 @@
 
 <h1 id="the-stack">The Stack</h1>
 
-<p>The web application backend was developed in Django, because it&rsquo;s quite nice, and the UI is built using Bootstrap. To enable students to log in with their Cambridge-issued Raven credentials, <a href="https://pypi.org/project/django-ucamwebauth/">django-ucamwebauth</a> is used as an authentication backend. The Django backend connects to a MySQL instance, and is deployed to the SRCF&rsquo;s webserver &lsquo;sinkhole&rsquo; using uwsgi and a series of Apache RewriteRules to enable reverse-proxy to a local port. The Python backend executes in a Python 3.5 <a href="https://virtualenv.pypa.io/en/stable/">virtualenv</a>.</p>
+<p>The web application backend was developed using Django, because it&rsquo;s quite nice, and the UI is built using Bootstrap. To enable students to log in with their Cambridge-issued Raven credentials, <a href="https://pypi.org/project/django-ucamwebauth/">django-ucamwebauth</a> is used as an authentication backend. The Django backend connects to a MySQL instance, and is deployed to the SRCF&rsquo;s webserver &lsquo;sinkhole&rsquo; using uwsgi and a series of Apache RewriteRules to enable reverse-proxy to a local port. The Python backend executes in a Python 3.5 <a href="https://virtualenv.pypa.io/en/stable/">virtualenv</a>.</p>
 
             </div>
         </section>
@@ -117,7 +117,7 @@
                 <a href="/cranworth/"><img src="https://cjoc.github.io/img/ballot1.png" alt=""></a>
                 <h4>Cranworth</h4>
                 <h5>Web App</h5>
-                <p>I created a web application in Django to serve Downing College&#39;s Cranworth Law Society website.</p>
+                <p>I created a web application using Django to serve Downing College&#39;s Cranworth Law Society website.</p>
                 <a href="/cranworth/" class="read-more">Read More</a>
             </div>
             
