--- a/mayballapp/index.html
+++ b/mayballapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-gb">
     <head>
         <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -77,7 +77,7 @@
                 <a href="/cranworth/"><img src="https://cjoc.github.io/img/ballot1.png" alt=""></a>
                 <h4>Cranworth</h4>
                 <h5>Web App</h5>
-                <p>I created a web application in Django to serve Downing College&#39;s Cranworth Law Society website.</p>
+                <p>I created a web application using Django to serve Downing College&#39;s Cranworth Law Society website.</p>
                 <a href="/cranworth/" class="read-more">Read More</a>
             </div>
             
