Changed CV; added information about May Ball app

--- a/cranworth/index.html
+++ b/cranworth/index.html
@@ -25,7 +25,9 @@
     <div class="main-case-study">
         <h1 class="title" style="text-align: center;">Cranworth Law Society Website</h1>
         <h2 class="subtitle" style="text-align: center;">Web App</h2>
-        <img src="img/cranworth1.png" alt="">
+        <div style="text-align: center; align-content: center">
+        <img align="center" src="img/cranworth1.png" alt="">
+        </div>
         <p align="center" class="summary">I created a web application using Django to serve Downing College&#39;s Cranworth Law Society website.</p>
         <h1 style="color: black; font-family: merriweather; font-size: 26px; line-height: 1.7em; margin-top: 0px;"></h1>
         <div align="center" class="case-links">
@@ -106,10 +108,10 @@
             </div>
             
             <div class="case-study-item">
-                <a href="/mayballapp/"><img src="https://cjoc.github.io/img/ballot1.png" alt=""></a>
+                <a href="/mayballapp/"><img src="https://cjoc.github.io/img/" alt=""></a>
                 <h4>May Ball App</h4>
                 <h5>Native Mobile App</h5>
-                <p>I&#39;m creating a native mobile application for iOS and Android for Downing College&#39;s 2019 May Ball.</p>
+                <p>I created a native mobile application for iOS and Android for Downing College&#39;s 2019 May Ball.</p>
                 <a href="/mayballapp/" class="read-more">Read More</a>
             </div>
             
